2021-12-02 Automated Python Blog Update

--- a/People.html
+++ b/People.html
@@ -73,6 +73,91 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Nathan Beman and the American Revolution</h2>
+      <hr>
+      <h5>December 2, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 4</div>
+    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 4</div>
+    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 4</div>
+    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 4</div>
+    <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_04.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>This post is about the American Revolution but has a peripheral connection to Chateaugay. </p.
+
+<p>I have just finished rereading a book about Henry Knox entitled: General Henry Knox -  Visionary General of the American Revolution by Mark Puls. </p>
+
+<p>Knox was a clerk in a Boston bookstore as a young man and developed an avid interest in military affairs. He read extensively and became very knowledgeable about artillery and its role in effective warfare. He eventually served in the colonial army and rose to the rank of general, having impressed General Washington with his mastery of military science.</p>
+
+<p>The Chateaugay connection to all this:</p>
+
+<p>On May 10, 1775, American troops commanded by Ethan Allen and Benedict Arnold, had captured Fort Ticonderoga from the English. Their guide was Nathan Beman, a young man from Shoreham, Vermont, just across Lake Champlain. Beman had spent much time at the fort, wandering through the grounds and visiting with the small contingent of British troops stationed there. Because of this familiarity with the grounds and the fort, his father, Samuel Beman, offered Nathan’s services to the colonial troops who were using the Beman tavern as a meeting place to plan the takeover of the fort.</p>
+
+<p>Nathan Beman would eventually become one of Chateaugay’s founders (along with his brother-in-law, Benjamin Roberts) in 1796. </p>
+
+<p>Beman described the takeover of Ticonderoga in a letter he sent to the Malone Palladium newspaper in May of 1835.</p>
+
+<p>Now, back to General Knox: </p>
+
+<p>Following the capture of the fort, Knox was tasked by General Washington with transporting the fifty-nine pieces of artillery from Ticonderoga to the highlands overlooking Boston. The British occupied the city and Washington believed if the cannon should be installed on Dorchester heights overlooking the city, the British would be forced to retreat.</p>
+
+<p>Knox directed his small contingent of men to dissemble the cannon and transport them over 300 miles to Boston. Using eighty teams of oxen and sleds, the men struggled with brutal cold and snow but made it to Boston over the next several weeks. The pieces were reassembled, positioned on the heights and the English departed the city. Knox’s “Noble Train of Artillery” had succeeded in its task.</p>
+
+<p>If you have an interest in Revolutionary War history, this book is an interesting and entertaining read. It illustrates both the extent of the American determination and George Washington’s skill at recognizing the abilities of the men in his command and utilizing those skills to the patriot advantage.</p>
+
+<p>This represents a Chateaugay-related story in the sense that one of our founders, Nathan Beman, played a very small role when the artillery was secured as Fort Ticonderoga was retaken by the Americans. This made the big pieces of armament available to drive the British from Boston early in the Revolution.</p>
+
+<p>The images shown here are:</p>
+
+<li>Puls’ book cover </li>
+
+<li>Alonzo Chappel’s 1856 painting of the takeover of Fort Ticonderoga showing Ethan Allen demanding the surrender with Nathan Beman depicted beside him.</li>
+
+<li>Nathan Beman cropped from the Chappel painting.</li>
+
+<li>A scene showing the American troops struggling with the eighty tons of artillery as they made the 300 mile journey from Ticonderoga, to Lake George and overland to Dorchester Heights. This is a Google image of a painting completed in 1946 by Tom Lovell entitled: “Noble Train of Artillery.” </li>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Summer of '61</h2>
       <hr>
       <h5>October 2, 2021 | Mick Jarvis</h5>
@@ -84,45 +169,45 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_06.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -187,7 +272,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Memories of Soft Drinks From the 1960s</h2>
@@ -201,51 +286,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -284,7 +369,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Sunset Inn 1872-1945</h2>
@@ -298,69 +383,69 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">8 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">9 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">10 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -405,7 +490,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
@@ -419,21 +504,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -497,7 +582,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Local Names on Wall that Heals</h2>
@@ -511,21 +596,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -540,7 +625,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
@@ -554,33 +639,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
 </div>
 <br>
 
@@ -622,7 +707,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
@@ -636,21 +721,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
 </div>
 <br>
 
@@ -673,7 +758,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -687,21 +772,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides8 none">
+  <div class="mySlides9 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides8 none">
+  <div class="mySlides9 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 8)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 8)">&#10095;</a>
 </div>
 <br>
 
@@ -720,7 +805,7 @@ They were fiercely proud of their home and its historical significance. They tre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [November 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [December 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
