--- a/People.html
+++ b/People.html
@@ -73,6 +73,95 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>CCS 2021 Pearl Harbor Exhibit</h2>
+      <hr>
+      <h5>December 7, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>80 years ago, on December 7, 1941, Pearl Harbor was attacked by Japanese planes.</p>
+
+<p>To mark this anniversary, Mrs. Shannon McArdle and the Advanced English class at CCS have designed and placed an exhibit in the windows of the Library at the school.</p>
+
+<p>This annual commemoration was begun three years ago thanks to the sponsorship of Joseph Ryan, former Chateaugay resident and son of Pearl Harbor survivor, Joseph J. Ryan. The Historical Society is proud to collaborate with the students and staff in producing this exhibit each fall.</p>
+
+<p>If you are attending any events at the school during December, be sure to stop by the library and take in the display.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Nathan Beman and the American Revolution</h2>
       <hr>
       <h5>December 2, 2021 | Mick Jarvis</h5>
@@ -84,33 +173,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -155,7 +244,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Summer of '61</h2>
@@ -169,45 +258,45 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">5 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">6 / 6</div>
     <img src="blog/imgs/2021-10-02_summerof61/summerof61_06.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -272,7 +361,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Memories of Soft Drinks From the 1960s</h2>
@@ -286,51 +375,51 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 7</div>
     <img src="blog/imgs/2021-09-19_softdrinks/softdrinks_07.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -369,7 +458,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Sunset Inn 1872-1945</h2>
@@ -383,69 +472,69 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">5 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">6 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">7 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">8 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">9 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">10 / 10</div>
     <img src="blog/imgs/2021-09-10_sunsetinn/sunsetinn_10.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
@@ -490,7 +579,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
@@ -504,21 +593,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides5 none">
+  <div class="mySlides6 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
 </div>
 <br>
 
@@ -582,7 +671,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Local Names on Wall that Heals</h2>
@@ -596,21 +685,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides6 none">
+  <div class="mySlides7 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-06-25_wallthatheals/wallthatheals_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 5)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 5)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
 </div>
 <br>
 
@@ -625,7 +714,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Smith / Alvord / Cook Home on East Main</h2>
@@ -639,33 +728,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides7 none">
+  <div class="mySlides8 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-06-13_smithcookhome/smithcookhome_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 6)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 6)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
 </div>
 <br>
 
@@ -707,7 +796,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Jake's Red Hots</h2>
@@ -721,21 +810,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides8 none">
+  <div class="mySlides9 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides8 none">
+  <div class="mySlides9 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-24_jakesredhots/jakesredhots_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 7)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 7)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 8)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 8)">&#10095;</a>
 </div>
 <br>
 
@@ -758,7 +847,7 @@ They were fiercely proud of their home and its historical significance. They tre
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Dairy's Delivery Driver Owen Murray</h2>
@@ -772,21 +861,21 @@ They were fiercely proud of their home and its historical significance. They tre
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides9 none">
+  <div class="mySlides10 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_1.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides9 none">
+  <div class="mySlides10 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-04-18_chateaugaydairy-owenmurray/chateaugaydairy-owenmurray_2.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 8)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 8)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 9)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 9)">&#10095;</a>
 </div>
 <br>
 
