--- a/Society_News.html
+++ b/Society_News.html
@@ -73,6 +73,95 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>CCS 2021 Pearl Harbor Exhibit</h2>
+      <hr>
+      <h5>December 7, 2021 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">4 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">5 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">6 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">7 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">8 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">9 / 9</div>
+    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>80 years ago, on December 7, 1941, Pearl Harbor was attacked by Japanese planes.</p>
+
+<p>To mark this anniversary, Mrs. Shannon McArdle and the Advanced English class at CCS have designed and placed an exhibit in the windows of the Library at the school.</p>
+
+<p>This annual commemoration was begun three years ago thanks to the sponsorship of Joseph Ryan, former Chateaugay resident and son of Pearl Harbor survivor, Joseph J. Ryan. The Historical Society is proud to collaborate with the students and staff in producing this exhibit each fall.</p>
+
+<p>If you are attending any events at the school during December, be sure to stop by the library and take in the display.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Gates Hoit Map</h2>
       <hr>
       <h5>July 16, 2021 | Mick Jarvis</h5>
@@ -84,21 +173,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-07-16_gateshoitmap/gateshoitmap_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -122,7 +211,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Reopening, Newsletter, Exhibits and More!</h2>
@@ -136,15 +225,15 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 1</div>
     <img src="blog/imgs/2021-05-18_chsupdate/chsupdate2_01.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -178,7 +267,7 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Chateaugay Historical Society Update</h2>
@@ -192,63 +281,63 @@ For example, the oldest written artifact in our collection is a hand drawn map o
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-04-25_chsupdate/chsupdate_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
