--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,71 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Admiral Theodorus Bailey</h2>
+      <hr>
+      <h5>January 7, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 3</div>
+    <img src="blog/imgs/2022-01-07_admiralbailey/admiralbailey_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 3</div>
+    <img src="blog/imgs/2022-01-07_admiralbailey/admiralbailey_02.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">3 / 3</div>
+    <img src="blog/imgs/2022-01-07_admiralbailey/admiralbailey_03.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>While I was researching in the Library of Congress archives yesterday, I came across a photograph of Chateaugay native, Theodorus Bailey (I have several Bailey portrait images in my files but had never seen this particular one).</p>
+
+<p>He was born in Chateaugay on April 12, 1805. The family lived in the small farmhouse that is now behind Wendy’s Quick Stop on Depot Street. Theodorus was the son of early Chateaugay settler and land speculator, Judge William Bailey.  He joined the US Navy at the age of thirteen, and was warranted as a midshipman. </p>
+
+<p>He served for forty-eight years, rising to the rank of Rear Admiral. He sailed around the world several times during his career and was the military official designated to accept the surrender of the city of New Orleans during the Civil War.</p>
+
+<p>He is buried in Oak Hill Cemetery in Georgetown, Washington D.C.</p>
+
+<p>The Chateaugay post of Civil War veterans, the Grand Army of the Republic or GAR, was renamed in his honor in 1890.</p>
+
+<p>The first photo above is the one I came across while looking through the LOC archives. It was taken by renowned Civil War photographer, Matthew Brady. The second image is of the oil portrait of the Admiral that hangs in the Chateaugay American Legion Post #875. This portrait was done by U.D. Tenney. The third photo is of the Bailey monument in Oak Hill Cemetery in Washington, D.C.</p>
+
+<p>This is actually the second Tenney portrait presented to the local GAR post. The first was destroyed in the fire in January, 1893 which wiped out the north side of East Main Street between River and John Streets, including the meeting rooms of the GAR. Following the fire, one of the Admiral’s sons asked the artist for another portrait to present to the GAR post. The portrait below, which had been painted in 1892, was immediately packed up by Tenney and shipped to Chateaugay.</p> 
+
+<p>In 1929 when the local GAR post was disbanded (because only two very elderly Civil War veterans remained), the portrait was passed on to the local Legion.</p>
+
+<p>This local oil painting was recently repaired and restored through a cooperative effort of the American Legion, the Chateaugay Rotary Club and the Chateaugay Historical Society.</p>
+
+<p>Chateaugay’s history is surely filled with interesting personalities and events. Who knew there was a peripheral Chateaugay connection to Matthew Brady and a local-born Admiral in Chateaugay’s past?...</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>CCS 2021 Pearl Harbor Exhibit</h2>
       <hr>
       <h5>December 7, 2021 | Mick Jarvis</h5>
@@ -84,63 +149,63 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 9</div>
     <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -159,7 +224,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Nathan Beman and the American Revolution</h2>
@@ -173,33 +238,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-12-02_americanrevolution/americanrevolution_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -243,91 +308,12 @@
 </div>
 
 
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>"Linen" Postcards</h2>
-      <hr>
-      <h5>October 17, 2021 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 6</div>
-    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 6</div>
-    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 6</div>
-    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_03.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">4 / 6</div>
-    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_04.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">5 / 6</div>
-    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_05.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">6 / 6</div>
-    <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_06.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>Have you ever seen postcards labelled “Greetings From Chateaugay, New York” that don’t really represent a local scene, like the ones shown here? If you have, then you were most likely looking at what is known as a “Linen” postcard.</p>
-
-<p>A German immigrant named Curt Teich (pronounced “tike”) developed a new type of postcard in the early 1930s. It had a very high cotton content which resulted in the linen-like look to the postcard paper. In addition, Teich invented a new coloring technique which allowed for vibrant tones and hues which made the cards particularly eye catching, like mini color paintings.</p>
-
-<p>These cards were produced from the 1930s into the 1950s. They typically had a tagline on the border that read “Greetings From Chateaugay” (or any other specific location). Because automobile use and the idea of travelling for vacations were both growing rapidly, most of the scenes were landscapes, of a sort, shown in vivid colors and portraying sweeping, scenic vistas.</p>
-
-<p>The majority of the scenes were actually made by combining specific features from several original images. In effect, they were collages of roadways, mountains, water, trees and plants that made up a scene that did not (nor was it intended to) represent the specific place mentioned in the tagline.</p>
-
-<p>The main appeal of the linen postcards was the vibrant, and often surreal, palette of colors. This was a great contrast to the Depression era postcards of black and white images.</p>
-
-<p>Linen postcards began to be replaced with actual photographs in the 1950s. This coincided with the growth of the Kodak company. In fact, the earliest true photo postcards are sometimes referred to as “Kodachrome” postcards.</p>
-
-<p>Five of the views shown here are linen postcards. The sixth is image is of an early photographic postcard which contained a tagline like its linen predecessors had displayed. Incidentally, this photo postcard is also a collage-type image and the photos used are not specific to the community named in the tagline.</p>
-
-<p>So, if you run across any postcards like these, you are looking at a vivid, stylized scene that only shares the name in the tagline with our hometown. The scene depicted (whether real or constructed of several unrelated parts) is not to be found anywhere in what we know as Chateaugay.</p>
-        </div>
-    </div>
-</div>
-
-
 <!--Footer-->
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [December 07, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [January 23, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
