Blog Python Automated

--- a/blog.html
+++ b/blog.html
@@ -321,9 +321,9 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>CCS 2021 Pearl Harbor Exhibit</h2>
+      <h2>Church of St. Dismas</h2>
       <hr>
-      <h5>December 7, 2021 | Mick Jarvis</h5>
+      <h5>December 27, 2021 | Mick Jarvis</h5>
     </div>
 
      <!-- Slideshow container -->
@@ -333,56 +333,44 @@
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">1 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_01.jpg" style="width:100%">
+     <div class="numbertext">1 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_01.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">2 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_02.jpg" style="width:100%">
+     <div class="numbertext">2 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_02.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">3 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_03.jpg" style="width:100%">
+     <div class="numbertext">3 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_03.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">4 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_04.jpg" style="width:100%">
+     <div class="numbertext">4 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_04.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">5 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_05.jpg" style="width:100%">
+     <div class="numbertext">5 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_05.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">6 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_06.jpg" style="width:100%">
+     <div class="numbertext">6 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_06.jpg" style="width:100%">
   </div>
 
 
   <div class="mySlides3 none">
-     <div class="numbertext">7 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_07.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">8 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_08.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">9 / 9</div>
-    <img src="blog/imgs/2021-12-07_ccsphexhibit2021/ccsphexhibit2021_09.jpg" style="width:100%">
+     <div class="numbertext">7 / 7</div>
+    <img src="blog/imgs/2021-12-27_stdismas/stdismas_07.jpg" style="width:100%">
   </div>
 
 
@@ -394,13 +382,15 @@
 
 
         <div class="blog-text">
-        <p>80 years ago, on December 7, 1941, Pearl Harbor was attacked by Japanese planes.</p>
+        <p>I came across this photo (photo 1) of the Church of St. Dismas , or the Church of the Good Thief, which is behind the walls of Clinton Correctional Facility (perhaps more commonly known as the Dannemora Prison). It has a direct connection to Chateaugay. It was built under the leadership of Father Ambrose Hyland, a Chateaugay native and one-time pastor at St. Patrick's Church. It was built with inmate labor against strong odds. However, Father Hyland prevailed, and the construction was begun in 1939 and completed in 1941. It is the only freestanding church inside a prison in the U.S.</p>
 
-<p>To mark this anniversary, Mrs. Shannon McArdle and the Advanced English class at CCS have designed and placed an exhibit in the windows of the Library at the school.</p>
+<p>Two books tell the story of the church's creation (images 2 and 3). Unfortunately, both are out of print but can be found at used book shops and on eBay. The first is the <i>Gates of Dannemora</i> and the other is <i>The Convict and the Stained Glass Windows</i> about the inmate that crafted the church's windows. </p>
 
-<p>This annual commemoration was begun three years ago thanks to the sponsorship of Joseph Ryan, former Chateaugay resident and son of Pearl Harbor survivor, Joseph J. Ryan. The Historical Society is proud to collaborate with the students and staff in producing this exhibit each fall.</p>
+<p>The fourth image shows construction, the fifth is the interior, the sixth is the outside of the building and the last is the prayer grotto that was placed outside the church.</p>
 
-<p>If you are attending any events at the school during December, be sure to stop by the library and take in the display.</p>
+<p>
+<a href="https://www.youtube.com/watch?v=WVuftGUjRBE" target="new">Here is a link to a YouTube video about the Church of St. Dismas...</a>
+</p>
         </div>
     </div>
 </div>
