--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">COVID-19 Alert</span>If you have NOT been vaccinated, you MUST wear a mask when entering and while in the Town Hall. Thank you!
+    <span class="badge">COVID-19 Alert</span>We will be opening for the season starting April 2nd. At this time, masking is not required and is at the discretion of each individual. For our schedule of open hours, please see the "Calendar" or "Visit" sections below. Thank you!
   </div>  
 </body>
  	
@@ -428,7 +428,7 @@
           Chateaugay, New York 12920</p>
       </div>
 	  <div class="col-md-6"> <i class="fa fa-clock-o fa-2x"></i>
-		<p><b>From May 1 through September 30 </b></br>
+		<p><b>From April 1 through September 30 </b></br>
 		Wednesdays and Saturdays from 9am - 12pm </br>
 		<b>From October 1 through April 30</b></br>
 		By appointment </p>
@@ -486,7 +486,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [May 23, 2021]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [March 16, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
