--- a/index.html
+++ b/index.html
@@ -424,13 +424,15 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-6"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>191 East Main Street<br>
+        <p><b>Mailing:</b><br>PO Box 123<br>
           Chateaugay, New York 12920</p>
+          <p><b>Physical:</b><br>191 East Main Street<br>
+          	Chateaugay, New York 12920
       </div>
 	  <div class="col-md-6"> <i class="fa fa-clock-o fa-2x"></i>
 		<p><b>From April 1 through September 30 </b></br>
-		Wednesdays and Saturdays from 9am - 12pm </br>
-		<b>From October 1 through April 30</b></br>
+		Wednesdays and Saturdays from 9am - 12pm </p>
+		<p><b>From October 1 through April 30</b></br>
 		By appointment </p>
 	</div>
       <div class="col-md-6"> <i class="fa fa-envelope-o fa-2x"></i>
@@ -486,7 +488,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [March 16, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [April 7, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
