--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">COVID-19 Alert</span>We will be opening for the season starting April 2nd. At this time, masking is not required and is at the discretion of each individual. For our schedule of open hours, please see the "Calendar" or "Visit" sections below. Thank you!
+    <span class="badge">COVID-19 Alert</span>We are open for the season! At this time, masking is not required and is at the discretion of each individual. For our schedule of open hours, please see the "Calendar" or "Visit" sections below. Thank you!
   </div>  
 </body>
  	
@@ -261,7 +261,7 @@
         <div class="tour-text">
         	<p> Discover more about Chateaugay through our self-guided tours! You can read through the brochures at home or follow along as you walk the route yourself to learn more about our community. Check back in as we have more content planned for the future! </p>
 
-        	<p><b>If taking a self-guided tour,</b> please be respectful of the stops along the route; remain on the sidewalk unless it is a space that is open to the public, and be respectful of the families and business occupying these stops.
+        	<p><b>If taking a self-guided tour,</b> please be respectful of the stops along the route; remain on the sidewalk unless it is a space that is open to the public, and be respectful of the families and business occupying these spaces.
    
         	<p class="text-center"><a class="btn btn-primary" href="AARCH Chateaugay Walking Tour - Brochure 2.pdf" target="new"><i class="fa fa-download"></i>Village Of Chateaugay Walking Tour</a></p>
           
