Blog Format Fix
- created blog css
- tweaked h2 style in blog css to fix spacing in blog titles
- changed slideshow box to only be 75% of the width of the page
- changed slideshow arrows to black to be more visible/easily found

--- a/Buildings.html
+++ b/Buildings.html
@@ -22,7 +22,7 @@
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/Blogstyle.css">
-<link rel="stylesheet" type="text/css"  href="css/CHSstyle.css">
+<link rel="stylesheet" type="text/css"  href="css/blog.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
 
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
@@ -73,7 +73,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Church of St. Dismas</h1>
+      <h2>Church of St. Dismas</h2>
       <hr>
       <h5>December 27, 2021 | Mick Jarvis</h5>
     </div>
@@ -152,7 +152,7 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Summer of '61</h1>
+      <h2>Summer of '61</h2>
       <hr>
       <h5>October 2, 2021 | Mick Jarvis</h5>
     </div>
@@ -269,7 +269,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Memories of Soft Drinks From the 1960s</h1>
+      <h2>Memories of Soft Drinks From the 1960s</h2>
       <hr>
       <h5>September 19, 2021 | Mick Jarvis</h5>
     </div>
@@ -366,7 +366,7 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>The Sunset Inn 1872-1945</h1>
+      <h2>The Sunset Inn 1872-1945</h2>
       <hr>
       <h5>September 10, 2021 | Mick Jarvis</h5>
     </div>
@@ -487,7 +487,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Recording Change on West Main</h1>
+      <h2>Recording Change on West Main</h2>
       <hr>
       <h5>September 5, 2021 | Mick Jarvis</h5>
     </div>
@@ -546,7 +546,7 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Chateaugay Hotel Photos</h1>
+      <h2>Chateaugay Hotel Photos</h2>
       <hr>
       <h5>July 23, 2021 | Mick Jarvis</h5>
     </div>
@@ -599,7 +599,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Smith / Alvord / Cook Home on East Main</h1>
+      <h2>Smith / Alvord / Cook Home on East Main</h2>
       <hr>
       <h5>June 13, 2021 | Mick Jarvis</h5>
     </div>
@@ -681,7 +681,7 @@ They were fiercely proud of their home and its historical significance. They tre
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Demo on West Main: McCoy and Denio Houses</h1>
+      <h2>Demo on West Main: McCoy and Denio Houses</h2>
       <hr>
       <h5>June 6, 2021 | Mick Jarvis</h5>
     </div>
@@ -927,7 +927,7 @@ They were fiercely proud of their home and its historical significance. They tre
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>East Main Street Postcard</h1>
+      <h2>East Main Street Postcard</h2>
       <hr>
       <h5>March 26, 2021 | Mick Jarvis</h5>
     </div>
@@ -978,7 +978,7 @@ They were fiercely proud of their home and its historical significance. They tre
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>West Main Street Pre WWI</h1>
+      <h2>West Main Street Pre WWI</h2>
       <hr>
       <h5>March 6, 2021 | Mick Jarvis</h5>
     </div>
@@ -1073,7 +1073,7 @@ They were fiercely proud of their home and its historical significance. They tre
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>East Main Street & Business Ads</h1>
+      <h2>East Main Street & Business Ads</h2>
       <hr>
       <h5>February 28, 2021 | Mick Jarvis</h5>
     </div>
@@ -1270,7 +1270,7 @@ They were fiercely proud of their home and its historical significance. They tre
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Stoughton - Dupree Farm</h1>
+      <h2>Stoughton - Dupree Farm</h2>
       <hr>
       <h5>February 19, 2021 | Mick Jarvis</h5>
     </div>
@@ -1407,7 +1407,7 @@ They were fiercely proud of their home and its historical significance. They tre
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Anderson Block</h1>
+      <h2>Anderson Block</h2>
       <hr>
       <h5>February 12, 2021 | Mick Jarvis</h5>
     </div>
@@ -1540,7 +1540,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Key Bank</h1>
+      <h2>Key Bank</h2>
       <hr>
       <h5>February 7, 2021 | Mick Jarvis</h5>
     </div>
@@ -1606,7 +1606,7 @@ Is this block the “grand dame” of the remaining business blocks on Main Stre
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 19, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 26, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
