Python Generated Pages
pages generated with updated blog content and new blog css file

--- a/Lakes.html
+++ b/Lakes.html
@@ -22,7 +22,7 @@
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/Blogstyle.css">
-<link rel="stylesheet" type="text/css"  href="css/CHSstyle.css">
+<link rel="stylesheet" type="text/css"  href="css/blog.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
 
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
@@ -73,7 +73,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Pine Lodge</h1>
+      <h2>Pine Lodge</h2>
       <hr>
       <h5>February 13, 2022 | Mick Jarvis</h5>
     </div>
@@ -136,7 +136,7 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Resort Hotels on Upper Chateaugay Lake</h1>
+      <h2>Resort Hotels on Upper Chateaugay Lake</h2>
       <hr>
       <h5>October 10, 2021 | Mick Jarvis</h5>
     </div>
@@ -239,7 +239,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>The Sunset Inn 1872-1945</h1>
+      <h2>The Sunset Inn 1872-1945</h2>
       <hr>
       <h5>September 10, 2021 | Mick Jarvis</h5>
     </div>
@@ -361,7 +361,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 19, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 26, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
