--- a/Transportation.html
+++ b/Transportation.html
@@ -22,7 +22,7 @@
 <!-- Stylesheet
     ================================================== -->
 <link rel="stylesheet" type="text/css"  href="css/Blogstyle.css">
-<link rel="stylesheet" type="text/css"  href="css/CHSstyle.css">
+<link rel="stylesheet" type="text/css"  href="css/blog.css">
 <link rel="stylesheet" type="text/css" href="css/prettyPhoto.css">
 
 <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
@@ -73,7 +73,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>"Linen" Postcards</h1>
+      <h2>"Linen" Postcards</h2>
       <hr>
       <h5>October 17, 2021 | Mick Jarvis</h5>
     </div>
@@ -152,7 +152,7 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Carrying the Mail in the Olden Days</h1>
+      <h2>Carrying the Mail in the Olden Days</h2>
       <hr>
       <h5>August 15, 2021 | Mick Jarvis</h5>
     </div>
@@ -244,7 +244,7 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>Railroad: Freight Operation</h1>
+      <h2>Railroad: Freight Operation</h2>
       <hr>
       <h5>May 28, 2021 | Mick Jarvis</h5>
     </div>
@@ -363,7 +363,7 @@
 <div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
-      <h1>The Railroad in Chateaugay</h1>
+      <h2>The Railroad in Chateaugay</h2>
       <hr>
       <h5>April 30, 2021 | Mick Jarvis</h5>
     </div>
@@ -533,7 +533,7 @@ Indeed, their vision was not far wrong. By the late 1800s the town was booming, 
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2018 Chateaugay Historical Society. </br>
-      Last Modified [April 19, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+      Last Modified [April 26, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
